# mac-faster

./: .gitignore  README.md  pyproject.toml
mac_faster/: __init__.py  cli.py  diagnostics.py  formatting.py  system_state.py
tests/: test_diagnostics.py
