[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-faster"
version = "0.1.0"
description = "Lightweight system insight tool tailored for macOS to reveal bottlenecks and remediation tips"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

